[tool.poetry]
name = "ansible-container"
version = "0.1.0"
description = ""
authors = ["asauerwein <andreas@sauerwein.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.0"
ansible = "9.4.0"
netaddr = "^1.0.0"
pynetbox = "^7.2.0"
pytz = "^2023.3.post1"
napalm = "^5.0.0"
napalm-ansible = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
